@@ -154,8 +154,8 @@
 			<code>--disable-pdb2pka</code> Disable PDB2PKA<br>
 			<code>--with-python</code> Path to Python (e.g., <code>/usr/local/bin/python2.5</code>)<br>
 			<code>--with-opal</code> enable <a href="#opal">Opal service integration</a> pointing to the remote clusters available at <a href="http://nbcr.net">NBCR</a>; optionally specify a URL for an alternate remote Opal service.<br>
-            <code>--with-apbs</code> enable the <a href="http://apbs.sourceforge.net/">APBS</a> web interface. Must be pointing to a local APBS binary. (EXPERIMENTAL)<br>
-            <code>--with-apbs-opal</code> enable Opal service integration for the APBS web interface pointing to the remote clusters available at NBCR; optionally specify a URL for an alternate remote Opal service. Requires simultaneous use of the <code>--with-apbs</code> flag, which must be pointing to a version of APBS greater than 1.0.0 (or the current SVN revision). (EXPERIMENTAL)<br>
+            <code>--with-apbs</code> enable the <a href="http://apbs.sourceforge.net/">APBS</a> web interface. Must be pointing to a local APBS binary.<br>
+            <code>--with-apbs-opal</code> enable Opal service integration for the APBS web interface pointing to the remote clusters available at NBCR; optionally specify a URL for an alternate remote Opal service. Requires simultaneous use of the <code>--with-apbs</code> flag, which must be pointing to a version of APBS greater than 1.0.0 (or the current SVN revision).<br>
 		</blockquote>
 		<h5>
 			Troubleshooting
