@@ -1,5 +1,5 @@
 #############################################################################
-BETA PUBLIC RELEASE VERSION 1.4.1       6-9-09
+BETA PUBLIC RELEASE VERSION 1.4.1       6-25-09
 #############################################################################
  - NEW FEATURES
   * Disabled Typemap output by default, added --typemap flag to create typemap
@@ -19,6 +19,8 @@ BETA PUBLIC RELEASE VERSION 1.4.1       6-9-09
     http://ws.nbcr.net/opal2/...
   * Compressed APBS OpenDX output files in zip format, so that users can 
     download zip files from the web server.
+  * Removed "EXPERIMENTAL" from APBS web solver interface and Jmol 
+    visualization interface.
 
  - BUG FIXES
   * Added -fno-stack-protector to CXXFLAGS in configure. This fixes the stack
